fix scrollbar & add npm run server with tsc -w

--- a/client/src/layout/mainLayout/sideMenu/SideMenu.css
+++ b/client/src/layout/mainLayout/sideMenu/SideMenu.css
@@ -19,17 +19,18 @@
 }
 
 .main-layout-menu::-webkit-scrollbar {
-  -webkit-appearance: auto;
+  -webkit-appearance: none;
   width: 7px;
 }
 
 .main-layout-menu:hover::-webkit-scrollbar-thumb {
-  background-color: #a8a7a7b7;
-}
-
-.main-layout-menu::-webkit-scrollbar-thumb {
   border-radius: 4px;
-  background-color: transparent;
+  background-color: #a8a7a773;
+}
+.main-layout-sider .main-layout-menu {
+  flex: 1 1 0;
+  overflow-y: overlay;
+  overflow-x: hidden;
 }
 
 a.mynavIcon:hover {
@@ -43,7 +44,7 @@ a.mynavIcon {
   /* margin: 5px 5px 5px 10px; */
   /* padding: 1rem 0 0rem 0; */
   display: inline-block;
-  font-size: 1.3rem;
+  font-size: 17px;
   color: #fff;
   opacity: 90%;
 }
@@ -53,7 +54,7 @@ a.mynavIcon {
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 1.2rem 0rem 1.2rem;
+  padding: 1rem 1.2rem 0rem 1rem;
   overflow: hidden;
 }
 
@@ -63,20 +64,11 @@ a.mynavIcon {
 
 .main-layout-sider .ant-layout-sider-children {
   display: flex;
-
   flex-direction: column;
   height: 100%;
 }
 .main-layout-sider .side-menu-top-bar {
   flex: 0 0 65.195px;
-}
-
-.main-layout-sider .main-layout-menu {
-  /* display: flexbox; */
-  /* flex-direction: column; */
-  flex: 1 1 0;
-  overflow: auto;
-  padding: 0;
 }
 
 .main-layout-sider
